src/test/ui/parser/macro/macro-doc-comments-2.rs
macro_rules! inner {
    (#![$inner:meta]) => ()
}

inner! {
    /// Outer
} //~^ ERROR no rules expected the token `[`

fn main() { }
